--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <title>Yoyo</title>
 </head>
 <body>
-    
+    <header class="header">
+        <a href="/" class="logo">
+            <img src="src/img/logo.svg" alt="" class="logo_image">
+        </a>
+        <a href="/" class="header_link">index</a>
+    </header>
+
+    <footer class="footer">
+        <div class="footer_contacts">
+            <span class="footer_contacts-title">Interested in learning more?</span>
+            <div class="footer_contacts-line footer_contacts-line__indent">
+                <a href="yoyodesign.com" class="footer_link">yoyodesign.com</a>
+            </div>
+            <div class="footer_contacts-line">
+                <span>t:</span>
+                <a href="tel:+44 (0) 1892 619 55" class="footer_link">+44 (0) 1892 619 55</a>
+            </div>
+            <div class="footer_contacts-line">
+                <span>e:</span>
+                <a href="mailto:jenny@yoyodesign.com" class="footer_link">jenny@yoyodesign.com</a>
+            </div>
+            <p class="footer_copyrights">© 2021 Yoyo Design Ltd. All rights reserved.</p>
+        </div>
+
+        <div class="share">
+            <span class="share_title">Share</span>
+            <div class="share_item">
+                <a href="#" class="share_link">LinkedIn</a>
+            </div>
+            <div class="share_item">
+                <a href="#" class="share_link">Twitter</a>
+            </div>
+            <div class="share_item">
+                <a href="#" class="share_link">Facebook</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
