--- a/index.html
+++ b/index.html
@@ -14,6 +14,142 @@
         <a href="/" class="header_link">index</a>
     </header>
 
+    <main class="content">
+        <div class="status">
+            <div class="status_top">
+                <h2 class="status_title">Creating digital experiences with impact</h2>
+                <div class="status_description">
+                    <p>This report outlines key trends impacting organisations and how embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition and leave a lasting impression on your customers.</p>
+                    
+                    <a href="#" class="status_link">How to install this PWA</a>
+                </div>
+            </div>
+            <div class="status_progress">
+                <div class="progress">
+                    <svg width="152" height="152" viewBox="0 0 152 152" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle opacity="0.2" cx="76" cy="76" r="75" stroke="white"/>
+                        <circle cx="76" cy="76" r="75" stroke="white" stroke-dasharray="565.48" stroke-dashoffset="-300"/>
+                    </svg>
+                </div>
+                <div class="status_progress-text">
+                    <span class="status_progress-value">32%</span> experienced
+                </div>
+            </div>
+        </div>
+
+        <div class="articles">
+
+            <!-- 1 -->
+            <article class="article">
+                <header class="article_header">
+                    <h1 class="article_title">
+                        The quick read
+                        <span class="article_number">01</span>
+                    </h1>
+                    <div class="article_header_info">
+                        <span class="article_duration">3 - 4 min read</span>
+                        <div class="article_intro">
+                            <p>How embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition.</p>
+                        </div>
+                    </div>
+                </header>
+                <div class="article_content">
+                    <p class="article_subtitle">What is this all about?</p>
+                    <section>
+                        <p>This report outlines key trends impacting organisations and how embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition and leave a lasting impression on your customers.</p>
+                    </section>
+                    <section>
+                        <p>The digital landscape is becoming ever more competitive at an alarming rate. In the early, heady days of the internet, having a website might have been enough to get noticed. Early adopters capitalised on the novelty and just being in the game was enough.</p>
+                        <p>However, digital transformation has been exponentially accelerated by the global coronavirus pandemic. What used to be a choice in the way we do things has rapidly evolved and is now embedded in our way of life. The resulting change in consumer behaviour is here to stay even post pandemic.</p>
+                    </section>
+                    <h2>As consumers get ever more sophisticated in their requirements and expectations, organisations need to step up to the next level of digital transformation and provide their customers with something special to set them apart.</h2>
+                    <section>
+                        <p>There are some key opportunities and growth sectors. Ecommerce is rising across all age demographics; social commerce is on the rise; the direct to consumer market is growing; and there is a wealth of new online market sectors to consider.</p>
+                        <p>It is an exciting time for organisations to capitalise on the opportunities presented by digital acceleration and ensure they are operating with a renewed focus on their customers’  experiences and improved proficiency in engaging with digital channels.</p>
+                        <p>This report is intended to support those leading, or working on, digital projects, who are passionate about the customer experience and crafting the best possible interactions between their customers and their organisation.</p>
+                    </section>
+                </div>
+            </article>
+
+            <!-- 1 -->
+            <article class="article">
+                <header class="article_header">
+                    <h1 class="article_title">
+                        Experiences with impact
+                        <span class="article_number">02</span>
+                    </h1>
+                    <div class="article_header_info">
+                        <span class="article_duration">3 - 4 min read</span>
+                        <div class="article_intro">
+                            <p>How embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition.</p>
+                        </div>
+                    </div>
+                </header>
+                <div class="article_content">
+                    <p class="article_subtitle">The digital experience</p>
+                    <section>
+                        <h2>“Experiences with impact is in our DNA. Our goal is to create something special that triggers a response. Something you feel in your gut.”</h2>
+                        <p>Gregg Lawrence - CCO Yoyo</p>
+                    </section>
+                    <section>
+                        <p>Our experiences of brands are so often taking place online that it is hard to remember a time when that wasn’t the case. When our interactions with companies, communities and people were only ever in face-to-face situations and delighting the consumer was dependent on an appealing shop front and the talent of the staff serving at the counter.</p>
+                        <p>A shoddy shop front or a rude shop assistant was enough to have us turning on our heels and finding an alternative further down the high street. And this is exactly what is happening in our online world today.</p>
+                    </section>
+                    <section>
+                        <h3>If a website isn’t appealing to the customer, then they will continue their search until they find one that is.</h3>
+                    </section>
+                    <section>
+                        <p>Incorporating optimisation in your website design and build, so customers can find you in this crowded digital space is imperative. Companies spend a huge amount of time investing in SEO and slick, exciting marketing campaigns to entice customers to their website, so it makes sense that once those customers are there, the online experience lives up to the hype and delivers on brand promises.</p>
+                    </section>
+                    <section>
+                        <p class="heading-1">57%</p>
+                        <h3>of people won’t recommend a business if its website isn’t designed or optimised well for mobile use.</h3>
+                        <p>Source: socPub: Mobile marketing mistakes</p>
+                        <img src="src/img/sections/section-2.jpg" alt="">
+                    </section>
+                    <section>
+                        <p>We’ve all experienced the frustration, when our interest has been sparked and we want to delve into some online content or better still, wanted to order something online, and then been completely let down by the process. </p>
+                        <p>Slow page loads, unnavigable menus, broken links, unappealing content, not being optimised for mobile use and poor website design, will have customers walking away and going back to their initial online search.</p>
+                    </section>
+                    <section>
+                        <h3>“Experiences with impact (EWI) is about a careful balance: of creativity and strategy, data and instinct, short and long-term, business and user goals.”</h3>
+                        <p>Brook Bateman - Head of Strategic Partnerships Yoyo</p>
+                    </section>
+                    <section>
+                        <p>Digital experiences with impact, are the culmination of years’ of strategic, creative and technical experience, delivering the most exciting online customer journeys to wow the user and keep them coming back.</p>
+                        <p>It’s about the skillset of the strategists to discover the intrinsic business goals and ensure they are reflected in the digital experience. It’s the time taken to fully comprehend the needs of the customer and how the online experience will fulfil them. It’s understanding the technicalities of shining a spotlight on your website, ensuring it is found and that it performs as it needs to. It’s about the things you can’t see. </p>
+                    </section>
+                    <section>
+                        <h3>“Experiences are what people buy, what people remember and what people talk about. They are fundamental to the product and the way it is promoted. They build brands.”</h3>
+                        <p>Source: Jason Vandeboom, founder and CEO, ActiveCampaign</p>
+                    </section>
+                    <section>
+                        <p>The customer can’t define or quantify a digital experience with impact. They will just see that everything works as it should. The online experience is friction-free and engages their senses. Loyalty and trust will build as the brand promises are fulfilled. Customers will want to return to their familiar and trusted brands and bookmark your website.</p>
+                        <p>The impact experiences have on you can be long-lasting - for better or worse.</p>
+                        <p>So how can organisations ensure they are creating digital experiences with impact that are having a positive effect on bottom line performance? </p>
+                    </section>
+                </div>
+            </article>
+
+
+
+
+
+
+
+
+
+
+        </div>
+
+    </main>
+
+    
+
+
+
+
+
     <footer class="footer">
         <div class="footer_contacts">
             <span class="footer_contacts-title">Interested in learning more?</span>
@@ -44,5 +180,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="src/js/main.js"></script>
 </body>
 </html>
