--- a/index.html
+++ b/index.html
@@ -2,17 +2,28 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#151515">
     <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
+    <!--
+
+        <link rel="manifest" href="manifest.json">
+    -->
     <title>Yoyo</title>
 </head>
-<body>
+<body class="content-hidden">
+    <div class="intro">
+        <span class="intro_text">
+            <span>E</span><span>x</span><span>p</span><span>e</span><span>r</span><span>i</span><span>e</span><span>n</span><span>c</span><span>e</span><span>s</span><span>&nbsp;</span><span>w</span><span>i</span><span>t</span><span>h</span><span>&nbsp;</span><span>i</span><span>m</span><span>p</span><span>a</span><span>c</span><span>t</span><span>&nbsp;</span>
+            <span class="intro_bright">t</span><span class="intro_bright">h</span><span class="intro_bright">e</span><span>&nbsp;</span><span class="intro_bright">d</span><span class="intro_bright">i</span><span class="intro_bright">g</span><span class="intro_bright">i</span><span class="intro_bright">t</span><span class="intro_bright">a</span><span class="intro_bright">l</span><span>&nbsp;</span><span class="intro_bright">r</span><span class="intro_bright">e</span><span class="intro_bright">p</span><span class="intro_bright">o</span><span class="intro_bright">r</span><span class="intro_bright">t</span>
+        </span>
+    </div>
+
     <header class="header">
         <a href="/" class="logo">
             <img src="src/img/logo.svg" alt="" class="logo_image">
         </a>
-        <a href="/" class="header_link">index</a>
+        <a href="/" class="header_link js-close-article">index</a>
     </header>
 
     <main class="content">
@@ -22,18 +33,18 @@
                 <div class="status_description">
                     <p>This report outlines key trends impacting organisations and how embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition and leave a lasting impression on your customers.</p>
                     
-                    <a href="#" class="status_link">How to install this PWA</a>
+                    <a href="#" class="status_link js-open-popup">How to install this PWA</a>
                 </div>
             </div>
             <div class="status_progress">
                 <div class="progress">
-                    <svg width="152" height="152" viewBox="0 0 152 152" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="progress_image" width="152" height="152" viewBox="0 0 152 152" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle opacity="0.2" cx="76" cy="76" r="75" stroke="white"/>
-                        <circle cx="76" cy="76" r="75" stroke="white" stroke-dasharray="565.48" stroke-dashoffset="-300"/>
+                        <circle class="js-progress-circle" cx="76" cy="76" r="75" stroke="white" stroke-dasharray="477" stroke-dashoffset="-477"/>
                     </svg>
                 </div>
                 <div class="status_progress-text">
-                    <span class="status_progress-value">32%</span> experienced
+                    <span class="status_progress-value js-progress-percent">0</span>% experienced
                 </div>
             </div>
         </div>
@@ -41,13 +52,13 @@
         <div class="articles">
 
             <!-- 1 -->
-            <article class="article">
+            <article class="article" data-article="1">
                 <header class="article_header">
                     <h1 class="article_title">
                         The quick read
                         <span class="article_number">01</span>
                     </h1>
-                    <div class="article_header_info">
+                    <div class="article_header-info">
                         <span class="article_duration">3 - 4 min read</span>
                         <div class="article_intro">
                             <p>How embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition.</p>
@@ -70,16 +81,78 @@
                         <p>This report is intended to support those leading, or working on, digital projects, who are passionate about the customer experience and crafting the best possible interactions between their customers and their organisation.</p>
                     </section>
                 </div>
+                <button class="article_next js-next-page">Next chapter</button>
+            </article>
+
+            <!-- 2 -->
+            <article class="article" data-article="2">
+                <header class="article_header">
+                    <h1 class="article_title">
+                        Experiences with impact
+                        <span class="article_number">02</span>
+                    </h1>
+                    <div class="article_header-info">
+                        <span class="article_duration">3 - 4 min read</span>
+                        <div class="article_intro">
+                            <p>How embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition.</p>
+                        </div>
+                    </div>
+                </header>
+                <div class="article_content">
+                    <p class="article_subtitle">The digital experience</p>
+                    <section>
+                        <h2>“Experiences with impact is in our DNA. Our goal is to create something special that triggers a response. Something you feel in your gut.”</h2>
+                        <p>Gregg Lawrence - CCO Yoyo</p>
+                    </section>
+                    <section>
+                        <p>Our experiences of brands are so often taking place online that it is hard to remember a time when that wasn’t the case. When our interactions with companies, communities and people were only ever in face-to-face situations and delighting the consumer was dependent on an appealing shop front and the talent of the staff serving at the counter.</p>
+                        <p>A shoddy shop front or a rude shop assistant was enough to have us turning on our heels and finding an alternative further down the high street. And this is exactly what is happening in our online world today.</p>
+                    </section>
+                    <section>
+                        <h3>If a website isn’t appealing to the customer, then they will continue their search until they find one that is.</h3>
+                    </section>
+                    <section>
+                        <p>Incorporating optimisation in your website design and build, so customers can find you in this crowded digital space is imperative. Companies spend a huge amount of time investing in SEO and slick, exciting marketing campaigns to entice customers to their website, so it makes sense that once those customers are there, the online experience lives up to the hype and delivers on brand promises.</p>
+                    </section>
+                    <section>
+                        <p class="heading-1">57%</p>
+                        <h3>of people won’t recommend a business if its website isn’t designed or optimised well for mobile use.</h3>
+                        <p>Source: socPub: Mobile marketing mistakes</p>
+                        <img src="src/img/sections/section-2.jpg" alt="">
+                    </section>
+                    <section>
+                        <p>We’ve all experienced the frustration, when our interest has been sparked and we want to delve into some online content or better still, wanted to order something online, and then been completely let down by the process. </p>
+                        <p>Slow page loads, unnavigable menus, broken links, unappealing content, not being optimised for mobile use and poor website design, will have customers walking away and going back to their initial online search.</p>
+                    </section>
+                    <section>
+                        <h3>“Experiences with impact (EWI) is about a careful balance: of creativity and strategy, data and instinct, short and long-term, business and user goals.”</h3>
+                        <p>Brook Bateman - Head of Strategic Partnerships Yoyo</p>
+                    </section>
+                    <section>
+                        <p>Digital experiences with impact, are the culmination of years’ of strategic, creative and technical experience, delivering the most exciting online customer journeys to wow the user and keep them coming back.</p>
+                        <p>It’s about the skillset of the strategists to discover the intrinsic business goals and ensure they are reflected in the digital experience. It’s the time taken to fully comprehend the needs of the customer and how the online experience will fulfil them. It’s understanding the technicalities of shining a spotlight on your website, ensuring it is found and that it performs as it needs to. It’s about the things you can’t see. </p>
+                    </section>
+                    <section>
+                        <h3>“Experiences are what people buy, what people remember and what people talk about. They are fundamental to the product and the way it is promoted. They build brands.”</h3>
+                        <p>Source: Jason Vandeboom, founder and CEO, ActiveCampaign</p>
+                    </section>
+                    <section>
+                        <p>The customer can’t define or quantify a digital experience with impact. They will just see that everything works as it should. The online experience is friction-free and engages their senses. Loyalty and trust will build as the brand promises are fulfilled. Customers will want to return to their familiar and trusted brands and bookmark your website.</p>
+                        <p>The impact experiences have on you can be long-lasting - for better or worse.</p>
+                        <p>So how can organisations ensure they are creating digital experiences with impact that are having a positive effect on bottom line performance? </p>
+                    </section>
+                </div>
+                <button class="article_next js-next-page">Next chapter</button>
             </article>
 
             <!-- 3 -->
-            <article class="article">
+            <article class="article" data-article="3">
                 <header class="article_header">
                     <h1 class="article_title">
                         The Science
                         <span class="article_number">03</span>
                     </h1>
-                    <div class="article_header_info">
+                    <div class="article_header-info">
                         <span class="article_duration">3 - 4 min read</span>
                         <div class="article_intro">
                             <p>How embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition.</p>
@@ -115,17 +188,18 @@
                         <p>So, although we don’t often think about or define how we feel when we’re navigating a website, or engaging with an organisation and its brand, it is clear that there are creative and design elements that will be affecting how we react, feel and respond.</p>
                     </section>
                 </div>
+                <button class="article_next js-next-page">Next chapter</button>
             </article>
 
 
             <!-- 4 -->
-            <article class="article">
+            <article class="article" data-article="4">
                 <header class="article_header">
                     <h1 class="article_title">
                         Impact the bottom line
                         <span class="article_number">04</span>
                     </h1>
-                    <div class="article_header_info">
+                    <div class="article_header-info">
                         <span class="article_duration">3 - 4 min read</span>
                         <div class="article_intro">
                             <p>How embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition.</p>
@@ -173,17 +247,18 @@
                         <p>One of the reasons for this is not putting the customers’ needs at the centre of the design process or involving them in validating the solution. Organisations need to invest in  user testing and customer research to get a deeper understanding of their needs, wants and requirements before embarking on their digital design and build. This includes gathering meaningful, qualitative data, as well as quantitative data. It also means iterating and building on the experience over time based on learnings. Even if the solution delivers first-time, it should evolve, just as your customers will.  </p>
                     </section>
                 </div>
+                <button class="article_next js-next-page">Next chapter</button>
             </article>
 
 
             <!-- 5 -->
-            <article class="article">
+            <article class="article" data-article="5">
                 <header class="article_header">
                     <h1 class="article_title">
                         Building an experience
                         <span class="article_number">05</span>
                     </h1>
-                    <div class="article_header_info">
+                    <div class="article_header-info">
                         <span class="article_duration">3 - 4 min read</span>
                         <div class="article_intro">
                             <p>How embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition.</p>
@@ -241,17 +316,18 @@
                         <p>Gregg Lawrence - CCO Yoyo</p>
                     </section>
                 </div>
+                <button class="article_next js-next-page">Next chapter</button>
             </article>
 
 
             <!-- 6 -->
-            <article class="article">
+            <article class="article" data-article="6">
                 <header class="article_header">
                     <h1 class="article_title">
                         Things to look out for
                         <span class="article_number">06</span>
                     </h1>
-                    <div class="article_header_info">
+                    <div class="article_header-info">
                         <span class="article_duration">3 - 4 min read</span>
                         <div class="article_intro">
                             <p>How embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition.</p>
@@ -288,17 +364,18 @@
                         <p>Customers are impacted by every department in the business, involving a variety of stakeholders and perspectives in the early discovery process will elevate the solution to beyond what’s gone before for the brand. Diversity of skillset and thought will enable you to think about the end-user from all angles and touchpoints, as well as highlight challenges in implementation that may otherwise be missed. Ultimately, colleagues are customers of your brand and can provide valuable input to the process, as well as advocate for the end-result.</p>
                     </section>
                 </div>
+                <button class="article_next js-next-page">Next chapter</button>
             </article>
 
 
              <!-- 7 -->
-            <article class="article">
+            <article class="article" data-article="7">
                 <header class="article_header">
                     <h1 class="article_title">
                         Ready to create?
                         <span class="article_number">07</span>
                     </h1>
-                    <div class="article_header_info">
+                    <div class="article_header-info">
                         <span class="article_duration">3 - 4 min read</span>
                         <div class="article_intro">
                             <p>How embracing digital experiences with impact is not only essential for business survival but will put you ahead of your competition.</p>
@@ -349,20 +426,9 @@
             </article>
 
 
-
-
-
-
-
         </div>
 
     </main>
-
-    
-
-
-
-
 
     <footer class="footer">
         <div class="footer_contacts">
@@ -395,14 +461,26 @@
         </div>
     </footer>
 
+    <div class="fade">
+        <div class="popup">
+            <button class="popup_close"></button>
+            <div class="popup_content">
+                <h1>PWA</h1>
+                <p>Install this application on your home screen for quick and easy access when you’re on the go.</p>
+            </div>
+            <div class="popup_footer">
+                <span>Just tap <img src="src/img/settings.svg" alt=""> then ‘Add to Home Screen’</span>
+            </div>
+        </div>
+    </div>
 
     <script>
-        self.addEventListener("load", async () => {
-            const container = navigator.serviceWorker;
-            if (container.controller === null) {
-                const reg = await container.register("src/js/sw.js");
-            }
-        });
+        //self.addEventListener("load", async () => {
+        //    const container = navigator.serviceWorker;
+        //    if (container.controller === null) {
+        //        const reg = await container.register("./sw.js");
+        //    }
+        //});
     </script>
     <script src="src/js/main.js"></script>
 </body>
